force-app/main/default/objects/Hotel__c/fields/Adress__c.field-meta.xml
<CustomField>
    <fullName>Adress__c</fullName>
    <inlineHelpText>Hotel Adress</inlineHelpText>
    <label>Adress</label>
    <length>100</length>
    <type>Text</type>
</CustomField>