force-app/main/default/objects/Hotel__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>states__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amritsar</fullName>
            </value>
            <value>
                <fullName>Gurugram</fullName>
            </value>
            <value>
                <fullName>Ludhiana</fullName>
            </value>
            <value>
                <fullName>Jalandhar</fullName>
            </value>
            <value>
                <fullName>Sonipat</fullName>
            </value>
            <value>
                <fullName>Panipat</fullName>
            </value>
            <value>
                <fullName>Haridwar</fullName>
            </value>
            <value>
                <fullName>Nainital</fullName>
            </value>
            <value>
                <fullName>Rishikesh</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>