force-app/main/default/objects/Hotel__c/fields/states__c.field-meta.xml
<CustomField>
    <fullName>states__c</fullName>
    <label>States</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Punjab</fullName>
            </value>
            <value>
                <fullName>Uttrakhand</fullName>
            </value>
            <value>
                <fullName>Haryana</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>